--- a/stylesheet.css
+++ b/stylesheet.css
@@ -4,4 +4,11 @@
     font-weight: normal;
     font-style: normal;
 }
+@font-face {
+    font-family: 'SauceCodePro Nerd Font Mono';
+    src: url('fonts/SauceCodeProNerdFontCompleteM-Medium.woff2') format('woff2');
+    font-weight: normal;
+    font-style: normal;
+}
+
 
