--- a/stylesheet.css
+++ b/stylesheet.css
@@ -7,7 +7,7 @@
 @font-face {
     font-family: 'SauceCodePro Nerd Font Mono';
     src: url('fonts/SauceCodeProNerdFontCompleteM-Medium.woff2') format('woff2');
-    font-weight: normal;
+    font-weight: 500;
     font-style: normal;
 }
 
